themes/climatecolab-theme/src/main/webapp/css/scss/pages/_p-ContestProposals.scss
$p-ContestProposals__list__element--proposalname__width: 635px !default;
$p-ContestProposals__list__element--contributor__width: 115px !default;
$p-ContestProposals__list__element--comments__background__top: 8px !default;
$p-ContestProposals__list__element__border: none !default;
$p-ContestProposals__list__element--judgeFellow__width: 159px !default;
$p-ContestProposals__list__element--judgeFellow__border--left: none !default;
$p-ContestProposals__list__element--contributor__width: 106px !default;
$p-ContestProposals__list__element--proposalname__judgeActions__width: 480px !default;
$p-ContestProposals__header__title__fontWeight: $b-Typography__fontWeight !default;
$p-ContestProposals__header__isTwoColumns: false !default;
$p-ContestProposals__header__leftColumn__width: 750px !default;
$p-ContestProposals__header__rightColumn__width: 150px !default;
$p-ContestProposals__header__ontology__term__useIcons: true !default;
$p-ContestProposals__header__ontology__display: inline-block !default;
$p-ContestProposals__header__ontology__link__display: inline-block !default;
$p-ContestProposals__header__team__display: inline-block !default;

$p-ContestProposals__header__detailButton__fontWeight: $b-Typography__fontWeight--bold !default;
$p-ContestProposals__header__detailButton__borderRadius: 5px !default;
$p-ContestProposals__header__detailButton__padding: 5px 5px 0px 5px !default;
$p-ContestProposals__header__detailButton__backgroundColor: $t-Color__primary__grey--light !default;
$p-ContestProposals__header__detailButton__border: 1px solid $t-Color__primary__grey--dark !default;
$p-ContestProposals__header__detailButton__display: inline-block !default;

$p-Contests__contestDetail__backgroundColor: $t-Color__grey--lightest !default;
$p-Contests__contestDetail__heading__background: url(../images/pattern-6x6-lite.png) darken($t-Color__grey--lightest, 7) !default;

.p-ContestProposals__header { //.contest-detail
  background-color: $p-Contests__contestDetail__backgroundColor;
  padding-bottom: 20px;
  border-bottom: 1px solid $t-Color__grey--light;
  margin-top: -4px;
  color: $t-Color__grey--darkest;
}

@if $p-ContestProposals__header__isTwoColumns {
  .p-ContestProposals__header__mainSection {
    display: inline-block;
    width: $p-ContestProposals__header__leftColumn__width;
    vertical-align: top;
  }
}

@if $p-ContestProposals__header__isTwoColumns {
  .p-ContestProposals__header__metaSection {
    display: inline-block;
    width: $p-ContestProposals__header__rightColumn__width;
    vertical-align: top;
  }
}

.p-ContestProposals__header__title { //.contest-detail .heading
  background: $p-Contests__contestDetail__heading__background;
  min-height: 24px;
  padding: 20px;
  font-size: 22px;
  font-weight: $p-ContestProposals__header__title__fontWeight;
  vertical-align: middle;
}

.p-ContestProposals__header__description { //.contest-detail .description {
  padding: 20px;

  p { //.contest-detail .description p
    padding-right: 22px;
    line-height: 24px;
    margin: 0;
  }
}

.p-ContestProposals__header__sponsorLogo { //div.sponsorLogo {
  max-width: 320px;
  min-width: 0;
  display: inline-block;
  margin-top: 20px;
  font-size: 14px;

  //.heading-sponsor-logo
  min-height: 30px;
  float: right;
  padding: 3px;

  img { //.heading-sponsor-logo img
    max-width: 100%;
    max-height: 110px;
    height: auto;
    width: auto;
  }
}

.p-ContestProposals__header__team { //.contest-detail .moreinfo
  display: $p-ContestProposals__header__team__display;
  max-width: 640px;
  padding: 20px 16px;
  position: relative;
  min-height: 37px;
}

.p-ContestProposals__header__team__roleName { //.contestTeamRole .contestTeamRoleName
  display: inline-block;
  padding-top: 15px;
  width: 65px;
}

.p-ContestProposals__header__team__member { //.contestTeamRole .contestTeamMember
  display: inline-block;
  white-space: nowrap;
  padding-right: 10px;

  img {
    margin-right: 5px;
  }
}

.p-ContestProposals__header__buttons {
  display: inline-block;
  width: 280px;
}

.p-ContestProposals__header__detailButton { //a.detailbutton
  position: relative;
  display: $p-ContestProposals__header__detailButton__display;

  padding: $p-ContestProposals__header__detailButton__padding;
  width: 115px;
  height: 27px;
  line-height: 27px;
  margin-left: 3px;

  font-size: 16px;
  font-weight: $p-ContestProposals__header__detailButton__fontWeight;
  text-align: center;

  background: $p-ContestProposals__header__detailButton__backgroundColor;
  border: $p-ContestProposals__header__detailButton__border;

  @include border-radius($p-ContestProposals__header__detailButton__borderRadius);
}

.p-ContestProposals__header__detailButton__count { //.discussion-button-badge {
  position: absolute;
  right: -7px;
  top: -6px;
  display: inline;
  text-align: center;
  font: 12px Arial, Helvetica, sans-serif;
  color: white;
  background: $t-Color__primary--darkest;
  padding: 0 5px;
  margin-left: 5px;
  @include border-radius(8px);
}

.p-ContestProposals__header__ontology {
  padding: 10px 16px;

  @if $p-ContestProposals__header__isTwoColumns {
    display: inline-block;
    width: $p-ContestProposals__header__rightColumn__width;
  }
}

.p-ContestProposals__header__ontology__term {
  display: $p-ContestProposals__header__ontology__display;
  margin-right: 15px;
  width: 220px;
}

%p-ContestProposals__header__ontology__term__title {
  display: inline-block;
  font-size: 16px;
  font-weight: $b-Typography__fontWeight--bold;
  height: 24px;
  padding-top: 1px;
  padding-right: 10px;
  background: none;
  width: auto;
}

.p-ContestProposals__header__ontology__term__title--what { //.contest-detail .what
  @extend %p-ContestProposals__header__ontology__term__title;
  @if $p-ContestProposals__header__ontology__term__useIcons {
    background: url(../images/icon-list-what.png) no-repeat;
    padding-left: 30px;
  }
}

.p-ContestProposals__header__ontology__term__title--where { //.contest-detail .where {
  @extend %p-ContestProposals__header__ontology__term__title;
  @if $p-ContestProposals__header__ontology__term__useIcons {
    background: url(../images/icon-list-where.png) no-repeat;
    padding-left: 33px;
  }
}

.p-ContestProposals__header__ontology__term__title--who { //.contest-detail .who {
  @extend %p-ContestProposals__header__ontology__term__title;
  @if $p-ContestProposals__header__ontology__term__useIcons {
    background: url(../images/icon-list-who.png) no-repeat;
    padding-left: 25px;
  }
}

.p-ContestProposals__header__ontology__term__title--how {
  @extend %p-ContestProposals__header__ontology__term__title;
}

.p-ContestProposals__header__ontology__term__link {
  display: $p-ContestProposals__header__ontology__link__display;
}

%p-ContestProposals__list__element {
  float: left;
  height: 37px;
}

.p-ContestProposals__list__element--proposalname { //.blueheaderbar .proposalname
  @extend %p-ContestProposals__list__element;
  width: $p-ContestProposals__list__element--proposalname__width;
  padding-left: 9px;
  border-right: $p-ContestProposals__list__element__border;

  &.completed { //.blueheaderbar.completed .proposalname
    width: 765px;
  }

  &.judgeActions {
    width: $p-ContestProposals__list__element--proposalname__judgeActions__width;
  }
}

.p-ContestProposals__list__element--thumbs { //.blueheaderbar .thumbs
  @extend %p-ContestProposals__list__element;
  width: 67px;
  position: relative;
  text-align: center;
  border-right: $p-ContestProposals__list__element__border;

  a {
    background: url(../images/icon-proposal-vote.png) no-repeat 0 7px;
    width: 20px;
    height: 37px;
    display: inline-block;
  }
}

.p-ContestProposals__list__element--votes { //.blueheaderbar .votes a
  @extend %p-ContestProposals__list__element;
  width: 67px;
  text-align: center;
  border-right: $p-ContestProposals__list__element__border;

  a {
    background: url(../images/icon-proposal-vote.png) no-repeat 0 7px;
    width: 20px;
    height: 37px;
    display: inline-block;
  }
}

.p-ContestProposals__list__element--comments { //.blueheaderbar .propcomm {
  @extend %p-ContestProposals__list__element;
  width: 65px;
  position: relative;
  text-align: center;
  border-right: $p-ContestProposals__list__element__border;

  a {
    background: url(../images/icon-list-comment.png) no-repeat 0 $p-ContestProposals__list__element--comments__background__top;
    width: 24px;
    height: 37px;
    display: inline-block;
  }
}

.p-ContestProposals__list__element--modifiedDate { //.blueheaderbar .modified
  @extend %p-ContestProposals__list__element;
  width: 85px;
  text-align: center;
  border-right: $p-ContestProposals__list__element__border;
}

.p-ContestProposals__list__element--contributor { //.blueheaderbar .contributor
  @extend %p-ContestProposals__list__element;
  width: $p-ContestProposals__list__element--contributor__width;
  text-align: center;
}

.p-ContestProposals__list__element--judgeFellow { //.blueheaderbar .judgefellow {
  @extend %p-ContestProposals__list__element;
  width: $p-ContestProposals__list__element--judgeFellow__width;
  position: relative;
  text-align: center;
  border-left: $p-ContestProposals__list__element--judgeFellow__border--left;

  a {
    font-size: 0.9em
  }
}


//TODO: used for addthis
.fixed-position-container {
  position: relative;
}

.fixed-position-inner-relative {
  overflow: auto;
}

.fixed-position-inner-fixed {
  position: absolute;
}

